--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@ LANDING_BUTTON = "U will pass the course."
 # (Optional) Site description on landing page
 LANDING_DESCRIPTION = ""
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE = "0. SLV General"
+LANDING_PAGE = "/0.SLV-General.md"
 # (Optional) Site title on landing page
 LANDING_TITLE = "I love obsidian-zola! 💖"
 PYTHON_VERSION = "3.8"
